--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 galaxy_info:
-  author: Shadow Walker
+  author: Michael Buluma
   namespace: buluma
   role_name: logrotate
   description: Install and configure logrotate on your system.
