--- a/tox.ini
+++ b/tox.ini
@@ -3,18 +3,16 @@
 #
 [tox]
 minversion = 3.21.4
-# 2.11 has been disabled: couldn't resolve module/action 'docker_container'.
-envlist = py{39}-ansible-{2.9,2.10}
+envlist = py{310}-ansible-{4,5}
 
 skipsdist = true
 
 [testenv]
 deps =
-    2.9: ansible == 2.9.*
-    2.10: ansible == 2.10.*
-    2.11: git+https://github.com/ansible/ansible.git@devel
+    4: ansible == 4.*
+    5: ansible == 5.*
     molecule[docker]
-    docker == 4.*
+    docker == 5.*
     ansible-lint == 5.*
 commands = molecule test
 setenv =
@@ -23,4 +21,4 @@ setenv =
     ANSIBLE_FORCE_COLOR=1
     ANSIBLE_ROLES_PATH=../
 
-passenv = namespace image tag
+passenv = namespace image tag DOCKER_HOST
