--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -11,7 +11,7 @@ on:
       - '*'
   pull_request:
   schedule:
-    - cron: '23 12 12 * *'
+    - cron: '2 1 1 * *'
 
 jobs:
   lint:
@@ -22,7 +22,7 @@ jobs:
         with:
           path: "${{ github.repository }}"
       - name: molecule
-        uses: robertdebock/molecule-action@2.6.16
+        uses: buluma/molecule-action@v4.0.5
         with:
           command: lint
   test:
@@ -37,16 +37,14 @@ jobs:
             tag: "latest"
           - image: "amazonlinux"
             tag: "latest"
-          - image: "centos"
-            tag: "7"
-          - image: "centos"
+          - image: "enterpriselinux"
             tag: "latest"
           - image: "debian"
             tag: "latest"
           - image: "debian"
-            tag: "bullseye"
+            tag: "bookworm"
           - image: "fedora"
-            tag: "33"
+            tag: "34"
           - image: "fedora"
             tag: "latest"
           - image: "fedora"
@@ -67,7 +65,7 @@ jobs:
       - name: parse apparmor for mysql
         run: sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
       - name: molecule
-        uses: robertdebock/molecule-action@2.6.16
+        uses: buluma/molecule-action@v4.0.5
         with:
           image: ${{ matrix.config.image }}
           tag: ${{ matrix.config.tag }}
