--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,6 +10,6 @@ logrotate_keep: 4
 # Should rotated logs be compressed??
 logrotate_compress: yes
 
-# User/Group for rotated log files
-logrotate_user: root
-logrotate_group: syslog
+# User/Group for rotated log files (Loaded by OS-Specific vars if found, or and can be set manually)
+logrotate_user: "{{ _logrotate_user[ansible_distribution] | default(_logrotate_user['default'] ) }}"
+logrotate_group: "{{ _logrotate_group[ansible_distribution] | default(_logrotate_group['default'] ) }}"
