--- a/requirements.yml
+++ b/requirements.yml
@@ -1,4 +1,5 @@
 ---
 roles:
-  - name: robertdebock.bootstrap
-  - name: robertdebock.cron
+  - name: buluma.bootstrap
+  - name: buluma.cron
+collections:
