--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -11,7 +11,7 @@ on:
       - '*'
   pull_request:
   schedule:
-    - cron: '2 1 1 * *'
+    - cron: '23 12 12 * *'
 
 jobs:
   lint:
@@ -22,7 +22,7 @@ jobs:
         with:
           path: "${{ github.repository }}"
       - name: molecule
-        uses: buluma/molecule-action@v4.0.5
+        uses: buluma/molecule-action@4.0.5
         with:
           command: lint
   test:
@@ -37,6 +37,8 @@ jobs:
             tag: "latest"
           - image: "amazonlinux"
             tag: "latest"
+          - image: "enterpriselinux"
+            tag: "7"
           - image: "enterpriselinux"
             tag: "latest"
           - image: "debian"
@@ -65,7 +67,7 @@ jobs:
       - name: parse apparmor for mysql
         run: sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
       - name: molecule
-        uses: buluma/molecule-action@v4.0.5
+        uses: buluma/molecule-action@4.0.5
         with:
           image: ${{ matrix.config.image }}
           tag: ${{ matrix.config.tag }}
