--- a/.github/workflows/requirements2png.yml
+++ b/.github/workflows/requirements2png.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           path: ${{ github.repository }}
       - name: create png
-        uses: buluma/graphviz-action@1.0.0
+        uses: robertdebock/graphviz-action@1.0.7
       - name: Commit files
         run: |
           cd ${{ github.repository }}
