--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 ---
-image: robertdebock/github-action-molecule:3.0.6
+image: "buluma/github-action-molecule:4.0.5"
 
 services:
   - docker:dind
@@ -20,16 +20,16 @@ molecule:
         tag: "latest"
       - image: "amazonlinux"
         tag: "latest"
-      - image: "centos"
+      - image: "enterpriselinux"
         tag: "7"
-      - image: "centos"
+      - image: "enterpriselinux"
         tag: "latest"
       - image: "debian"
         tag: "latest"
       - image: "debian"
-        tag: "bullseye"
+        tag: "bookworm"
       - image: "fedora"
-        tag: "33"
+        tag: "34"
       - image: "fedora"
         tag: "latest"
       - image: "fedora"
