--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,11 @@ cache:
 
 install:
   - pip install --upgrade pip
-  - pip install yamllint
-  - pip install ansible-lint
+  - pip install ansible ansible-lint yamllint
 
 script:
   - yamllint .
-  # - ansible-lint
+  - ansible-lint
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
