--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -37,22 +37,22 @@ jobs:
             tag: "latest"
           - image: "amazonlinux"
             tag: "latest"
-          - image: "enterpriselinux"
-            tag: "latest"
-          - image: "debian"
-            tag: "latest"
-          - image: "debian"
-            tag: "bookworm"
+          # - image: "enterpriselinux"
+          #  tag: "latest"
+          # - image: "debian"
+          #  tag: "latest"
+          # - image: "debian"
+          #  tag: "bookworm"
           - image: "fedora"
             tag: "34"
           - image: "fedora"
             tag: "latest"
           - image: "fedora"
             tag: "rawhide"
-          - image: "opensuse"
-            tag: "latest"
-          - image: "ubuntu"
-            tag: "latest"
+          # - image: "opensuse"
+          #  tag: "latest"
+          # - image: "ubuntu"
+          #  tag: "latest"
           - image: "ubuntu"
             tag: "bionic"
     steps:
