--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -53,8 +53,8 @@ jobs:
           #  tag: "latest"
           # - image: "ubuntu"
           #  tag: "latest"
-          - image: "ubuntu"
-            tag: "bionic"
+          # - image: "ubuntu"
+          #  tag: "bionic"
     steps:
       - name: checkout
         uses: actions/checkout@v2
