--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -4,5 +4,5 @@
 #
 repository:
   description: Install and configure logrotate on your system.
-  homepage: https://buluma.co.ke/
+  homepage: https://buluma.github.io/
   topics: logrotate, ansible, molecule, tox, playbook, hacktoberfest
