--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -7,7 +7,9 @@ name: Ansible Molecule
 
 on:
   push:
-    tags_ignore:
+    branches:
+      - '**'
+    tags-ignore:
       - '*'
   pull_request:
   schedule:
@@ -18,7 +20,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.4.0
         with:
           path: "${{ github.repository }}"
       - name: molecule
@@ -33,31 +35,33 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - image: "alpine"
+          - image: "alpine-openrc"
             tag: "latest"
           - image: "amazonlinux"
             tag: "latest"
-          # - image: "enterpriselinux"
-          #  tag: "latest"
-          # - image: "debian"
-          #  tag: "latest"
-          # - image: "debian" TODO check why this isnt working
-          #  tag: "bookworm"
-          - image: "fedora"
-            tag: "34"
-          - image: "fedora"
+          - image: "enterpriselinux"
+            tag: "7"
+          - image: "enterpriselinux"
             tag: "latest"
-          - image: "fedora"
+          - image: "debian-systemd"
+            tag: "latest"
+          - image: "debian-systemd"
+            tag: "bookworm"
+          - image: "fedora-systemd"
+            tag: "34"
+          - image: "fedora-systemd"
+            tag: "latest"
+          - image: "fedora-systemd"
             tag: "rawhide"
-          # - image: "opensuse"
-          #  tag: "latest"
-          # - image: "ubuntu"
-          #  tag: "latest"
-          # - image: "ubuntu"
-          #  tag: "bionic"
+          - image: "opensuse"
+            tag: "latest"
+          - image: "docker-ubuntu-systemd"
+            tag: "latest"
+          - image: "docker-ubuntu-systemd"
+            tag: "bionic"
     steps:
       - name: checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.4.0
         with:
           path: "${{ github.repository }}"
       - name: disable apparmor for mysql
