--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ molecule:
       - image: "debian-systemd"
         tag: "latest"
       - image: "debian-systemd"
-        tag: "bookworm"
+        tag: "buster"
       - image: "fedora-systemd"
         tag: "34"
       - image: "fedora-systemd"
@@ -70,7 +70,7 @@ testing:
       - image: "debian-systemd"
         tag: "latest"
       - image: "debian-systemd"
-        tag: "bookworm"
+        tag: "buster"
       - image: "fedora-systemd"
         tag: "34"
       - image: "fedora-systemd"
