--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -11,6 +11,8 @@ on:
       - master
       - main
       - testing
+      - dependabot/**
+      - renovate/**
     paths-ignore:
       - '**/README.md'
       - '**/CHANGELOG.md'
@@ -20,7 +22,7 @@ on:
   pull_request_target:
   schedule:
     # - cron: '23 12 12 * *'
-    - cron: '23 12 * * 12'
+    - cron: '23 12 * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -40,8 +42,6 @@ jobs:
       - name: ansible-lint
         uses: ansible-community/ansible-lint-action@main
   test:
-    needs:
-      - lint
     runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
@@ -89,7 +89,9 @@ jobs:
           tag: ${{ matrix.config.tag }}
 
   dependabot:
-    needs: test
+    needs:
+      - lint
+      - test
     runs-on: ubuntu-latest
     if: ${{ github.actor == 'dependabot[bot]' || github.actor == 'buluma' && github.event_name == 'pull_request'}}
     steps:
