Update Action containers.

--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -70,6 +70,10 @@ jobs:
             tag: "focal"
           - image: "docker-ubuntu-systemd"
             tag: "bionic"
+          - image: "docker-ubuntu-systemd"
+            tag: "lunar"
+          - image: "docker-ubuntu-systemd"
+            tag: "noble"
           - image: "kali"
             tag: "latest"
     steps:
