--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -1,8 +1,8 @@
 ---
-- name: prepare
+- name: Prepare
   hosts: all
-  become: yes
-  gather_facts: no
+  become: true
+  gather_facts: false
 
   roles:
     - role: buluma.bootstrap
@@ -13,25 +13,35 @@
       ansible.builtin.file:
         path: "{{ item }}"
         state: directory
+        mode: "0755"
       loop:
         - /var/log/example
         - /var/log/example-frequency
         - /var/log/example-keep
         - /var/log/example-compress
+        - /var/log/example-copylog
+        - /var/log/example-copytruncate
+        - /var/log/example-delaycompress
         - /var/log/example-script
         - /var/log/example-sharedscripts
+        - /var/log/example-dateyesterday
 
     - name: Create log file
       ansible.builtin.copy:
         dest: "{{ item }}"
         content: "example"
+        mode: "0644"
       loop:
         - /var/log/example/app.log
         - /var/log/example-frequency/app.log
         - /var/log/example-keep/app.log
         - /var/log/example-compress/app.log
+        - /var/log/example-copylog/app.log
+        - /var/log/example-copytruncate/app.log
+        - /var/log/example-delaycompress/app.log
         - /var/log/example-script/app.log
         - /var/log/example-sharedscripts/app.log
+        - /var/log/example-dateyesterday/app.log
         - /var/log/btmp
         - /var/log/wtmp
         - /var/log/hawkey.log
